Update project deps and config